--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <img src="almubdi.png" alt="logo">
     <model-viewer id="ar" src="model/dental_chair.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y">
         <button slot="ar-button" id="ar-button">
             View AR
