--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <img src="almubdi.png" alt="logo">
-    <model-viewer id="ar" src="./model/dental_chair.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y">
+    <model-viewer id="ar" modes="scene-viewer quick-look webxr" reveal="manual" src="./model/dental_chair.glb" ar
+        shadow-intensity="1" camera-controls touch-action="pan-y">
         <button slot="ar-button" id="ar-button">
             View AR
         </button>
