--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <img src="almubdi.png" alt="logo">
-    <model-viewer id="ar" modes="scene-viewer quick-look webxr" src="./dental_chair.glb" ar shadow-intensity="1"
-        camera-controls touch-action="pan-y">
+    <model-viewer id="ar" ar-scale="fixed" modes="scene-viewer quick-look webxr" src="./model/untitled0.gltf" ar
+        shadow-intensity="1" camera-controls touch-action="pan-y">
         <button slot="ar-button" id="ar-button">
             View AR
         </button>
