--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 
 <body>
     <img src="almubdi.png" alt="logo">
-    <model-viewer id="ar" ar-scale="auto" modes="scene-viewer quick-look webxr" src="./model/dental_chair2.glb" ar
+    <model-viewer id="ar" ar-scale="auto" modes="scene-viewer quick-look webxr" src="./model/scene.gltf" ar
+        shadow-intensity="1" camera-controls touch-action="pan-y">
+        <button slot="ar-button" id="ar-button">
+            View AR
+        </button>
+    </model-viewer>
+    <model-viewer id="ar2" ar-scale="auto" modes="scene-viewer quick-look webxr" src="./model/dental_chair_a.glb" ar
         shadow-intensity="1" camera-controls touch-action="pan-y">
         <button slot="ar-button" id="ar-button">
             View AR
